src/test/ui/feature-gates/feature-gate-non_exhaustive.stderr
error[E0658]: non exhaustive is an experimental feature
  --> $DIR/feature-gate-non_exhaustive.rs:3:1
   |
LL | #[non_exhaustive]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44109 <https://github.com/rust-lang/rust/issues/44109> for more information
   = help: add `#![feature(non_exhaustive)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
